apps/sdkss-service/overlay/dev/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdkss-service
spec:
  replicas: 1
